--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <div id="error">Tu navegador no soporta el lienzo (Canvas).</div>
         <div id="wrap">
             <div id="code">
-                Dejaré esta página aquí como evidencia de que fuiste y eres muy especial para mí.<br />
+                Cambio en el lenguaje en la primer párrafo Dejaré esta página aquí como evidencia usted es y será muy especial para mí .<br />
                 <br />
                ¿Sabe algo? A veces regreso en silencio a aquel primer mensaje que le escribí… a esa historia donde todo empezó<br />
                 <br />
